# skellysubs

./: .env.sample  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: build-ui.yml  google-cloudrun-docker.yml
gcloud/: GCE.txt
sample_data/2025-01-27-jsm-video/: 2025-01-27-jsm-video_transcription.json  2025-01-27-jsm-video_translation.json  notes_2025-01-27-video.md
sample_data/2025-02-12-jsm-video/: 2025-02-12-jsm-video_transcription.json  2025-02-12-jsm-video_translation.json
sample_data/sample_video_long/: sample_video_long_transcription.json  sample_video_long_translation.json
sample_data/sample_video_short/: sample_video_short_transcription.json  sample_video_short_translation.json
sample_data/start-here-1/: start-here-1_transcription.json  start-here-1_translation.json
sample_data/video_url_ending_with_0bc27df0-9614-47/: video_url_ending_with_0bc27df0-9614-47_transcription.json  video_url_ending_with_0bc27df0-9614-47_translation.json
sample_data_lfs/sample_video_long/: sample_video_long_translation.json
skellysubs/: __init__.py  __main__.py  run_as_script.py  run_skellysubs_server.py  wikipedia_cache.json
skellysubs-ui/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
skellysubs-ui/app/: page.tsx
skellysubs-ui/components/: VideoAudioRecorder.tsx  VideoRecorder.tsx
skellysubs-ui/schemas/: mediaChunks.ts
skellysubs-ui/src/: App.css  App.test.tsx  App.tsx  index.css  language_configs.json  language_configs_all.json  (+1 more)
(+457 files in other folders)
