[project]
name = "skellysubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "jieba>=0.42.1",
    "moviepy>=2.1.2",
    "ollama>=0.4.7",
    "openai>=1.60.1",
    "opencv-contrib-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "python-bidi>=0.6.3",
    "whisper>=1.1.10",
]
